# megaminx

./: .gitignore  CLAUDE.md  LICENSE  LICENSE-BOOKLET  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-14-kilominx-phase-a.md  2026-06-16-kilominx-phase-b-geometry.md  2026-06-19-kilominx-phase-c-solver.md  2026-06-19-kilominx-phase-d-booklet.md  2026-06-25-4x4-center-instructions.md
docs/superpowers/specs/: 2026-06-09-megaminx-guide-design.md  2026-06-11-megaminx-coach-site.md  2026-06-13-kilominx-design.md  2026-06-14-megaminx-coach-static-site-design.md  2026-06-16-kilominx-phase-b-geometry-design.md  2026-06-19-kilominx-phase-c-solver-design.md  2026-06-19-kilominx-phase-d-booklet-design.md  2026-06-21-llm-harness-framework-design.md  2026-06-21-llm-harness-framework-ts-design.md  2026-06-24-cube-4x4-design.md  2026-06-25-4x4-center-instructions-design.md
minx/: cube.py  cube_geometry.py  cube_pieces.py  cube_render.py  geometry.py  method.py  method_cube.py  method_kilo.py  method_mega.py  pieces.py  puzzle.py  render.py  solver.py  spec.py
tests/: test_core.py  test_cube.py  test_guides.py  test_kilo.py  test_puzzle.py  test_solver_opt.py
